--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ layout: default
 <p>I'm hosted with GitHub Pages. Random text adding to check</p>
 
 <p>
+Site coming up that will include write-ups and articles on information security domain.
 
-I'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to check'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to check'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to check'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to checkI'm hosted with GitHub Pages. Random text adding to che
+Stay tuned!
 
 </p>
 </body>
