--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 <body>
 <h1>Hello World</h1>
 
+<a href="https://leetpwn.github.io/Contact.html">Contact</a>
 
 <p>
 Site coming up that will include write-ups and articles on information security domain.
