--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ layout: default
 <h1>Hello World</h1>
 
 <a href="https://leetpwn.github.io/Contact.html">Contact</a>
+  
+<a href=https://leetpwn.github.io/chmod.html></a>
 
 <p>
 Site coming up that will include write-ups and articles on information security domain.
