--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <a href="https://leetpwn.github.io/Contact.html">Contact</a>
   
-<a href="https://leetpwn.github.io/chmod.html"></a>
+<a href="https://leetpwn.github.io/chmod.html">Articles</a>
 
 <p>
 Site coming up that will include write-ups and articles on information security domain.
